--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 server.port=2019
+jwt.token.secret=secretsecurity
+jwt.token.expired=3600000
 
 spring.mustache.expose-request-attributes=true
